@@ -109,8 +109,9 @@ production.
 * (bug 32512) Include 'associated namespace' checkbox on Special:Contributions
 * Added $wgSend404Code, true by default, which can be set to false to send a 
   200 status code instead of 404 for nonexistent articles.
-* (bug 23427) Introduced {{PAGEID}} variable to expose page.page_id
-* (bug 33447) Link to the broken image tracking category from Special:Wantedfiles
+* (bug 23427) Introduced {{PAGEID}} variable to expose page.page_id.
+* (bug 33447) Link to the broken image tracking category from Special:Wantedfiles.
+* (bug 27724) Add timestamp to job queue.
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if.
